# Nekomata

./: .gitignore  AGENTS.md  CATS.md  LICENSE  LICENSE-ASSETS.md  PACKAGE.md  README.md  README_EN.md  config.toml  nekomata.spec  pyproject.toml
.github/workflows/: release.yml
.neko/: settings.json.example
.tmp/: nekomata_style2_marker
assets/icon/: nekomata.icns
data/: card_meanings.yaml  ui_strings.json
data/locales/: en.json  spreads_en.json  spreads_zh.json  zh.json
data/prompts/: body_mind_spirit.md  past_present_future.md  single.md  situation_action_result.md  system.md
docs/: architecture.md
docs/plans/: phase1-mvp.md
scripts/: build_desktop.py  generate_card_data.py  generate_runtime_card_images.py
src/nekomata/: _paths.py  app.py  cli.py  clipboard.py  desktop.py  i18n.py  strings.py
src/nekomata/ai/: interpreter.py  prompts.py
src/nekomata/card/: data.py  deck.py  display.py  types.py
src/nekomata/data/: card_meanings.yaml  spread_strings.json  ui_strings.json
src/nekomata/data/locales/: spreads_en.json  zh.json
src/nekomata/data/prompts/: five_card_cross.md  system.md  user_template.md
src/nekomata/render/: animations.py  card_renderer.py  image_export.py  styles.py  terminal.py  themes.py
src/nekomata/screens/: box_manager.py  card_browser.py  draw.py  draw_css.py  draw_deck_anim.py  draw_detail.py  draw_dialog.py  draw_interpret.py  draw_pick.py  draw_widgets.py  home.py  interpretation.py  journal.py  question.py  reading.py  setup.py  solid_static.py  spread_select.py  stream_handler.py  widgets.py
src/nekomata/spread/: __init__.py  base.py  celtic.py  five_card.py  single.py  three_card.py
src/nekomata/storage/: config.py  journal.py
src/nekomata/web/: server.py
src/nekomata/web/static/: animations.css  app.js  base.css  browser.js  cards.js  carousel.js  components.css  draw.js  index.html  interpret.js  particles.js  screens.css  slots.css  state.js  style.css  utils.js
tests/: conftest.py  test_desktop.py  test_paths.py
tests/integration/: test_app.py  test_card_browser.py  test_flow.py  test_flow_detail.py  test_flow_nav.py  test_journal.py  test_journal_screen.py
tests/unit/: test_animations.py  test_config.py  test_data.py  test_deck.py  test_image_export.py  test_interpreter.py  test_journal.py  test_prompts.py  test_renderer.py  test_spread.py  test_terminal.py  test_themes.py  test_types.py  test_ui_style.py  test_web_style.py  test_widgets.py
